rf to grid header-footer

--- a/src/index.html
+++ b/src/index.html
@@ -9,54 +9,106 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <heade></heade>
-    <main>
-      <nav>
-      </nav>
-    
-      <header>
-      </header>
-    
-      <section>
-        <img style="float: left;margin: 1rem;" src="https://via.placeholder.com/280x170.png?text=For+InterVolga" alt="">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam rem sit unde corporis porro distinctio repellendus aliquid quaerat aperiam reiciendis similique quam ipsa, labore odit error nulla laboriosam dolore maiores.
-          Odio praesentium vel doloribus quod maiores. Laboriosam repudiandae omnis dolorum nesciunt, dicta totam, doloribus illum ullam tempore, perspiciatis eaque hic voluptatum officia harum. Doloremque minima tempore consequuntur rem quia quo.
-          Perferendis similique nulla sint, impedit eveniet praesentium blanditiis! Sed nostrum reprehenderit cum cupiditate natus voluptatem odit quibusdam minima id rerum voluptatum saepe, temporibus a tempore obcaecati hic, necessitatibus non distinctio.
-          Sit aut ea voluptatibus porro vitae illo quod. In aliquid, culpa minima laborum sunt itaque quisquam deserunt beatae delectus cumque, quidem corrupti veritatis voluptate accusantium ex vero provident facilis unde!
-          Qui, impedit! Saepe error veniam unde quis dolore nemo soluta facilis? Repudiandae voluptates ipsam maxime debitis quasi, repellendus consequuntur exercitationem. Repellendus assumenda voluptatibus porro aut placeat, temporibus numquam tempore accusamus?
-          Quisquam nobis quas dolorum facere cupiditate harum placeat deleniti hic est voluptate! Quidem adipisci, aliquid, facilis earum autem eum eos exercitationem ut enim nostrum reprehenderit? Sunt deserunt ratione impedit quas!
-          Facere aliquid voluptates a nihil hic assumenda esse veniam at repudiandae. Voluptatum nostrum nemo deleniti laudantium. Laudantium cumque a eum error ducimus dolor iure, doloribus, rerum quia dolore ipsa veritatis!
-          Illum dolor porro impedit harum? Eos, officia consectetur! Excepturi eius culpa accusantium vitae architecto perferendis quibusdam nulla, minus doloremque facilis repellendus error eligendi, quas expedita nam quae rem, voluptate sed!
-          Facilis iusto ratione labore, magnam ipsam architecto aspernatur magni sint ex aliquam delectus quis expedita accusantium. Nulla, unde animi. Corporis dignissimos tempore officiis aperiam ullam facilis consectetur ducimus praesentium sequi.
-          Enim, est quaerat et deserunt voluptas soluta tempore, laborum maxime temporibus tenetur alias pariatur deleniti molestiae facilis! Reiciendis suscipit corporis tempora numquam. Molestiae repellendus rem quas quibusdam distinctio harum repudiandae.
-          Doloribus molestias, assumenda cupiditate culpa autem consectetur. Repellat, officiis odio. Voluptate rerum ipsum molestias possimus quis mollitia quam recusandae cumque eos! Dolore, officiis molestiae accusamus placeat explicabo quae ut voluptate!
-          Vitae necessitatibus libero numquam quod deserunt a quasi doloremque magni voluptatibus soluta. Quam tempore vel sunt necessitatibus quaerat, dolores, asperiores eos itaque ab illum ducimus delectus modi error, sapiente recusandae.
-          Voluptate iusto illo deleniti fugiat porro quisquam fuga dolores voluptatum, ratione velit ab eum corrupti fugit reprehenderit necessitatibus dolorum optio exercitationem ex ullam officia labore, qui saepe nemo expedita. Ipsam.
-          Ex laboriosam velit exercitationem beatae mollitia assumenda a fuga facere voluptatibus ut amet sint qui, reprehenderit doloribus autem reiciendis tempore maxime voluptatum alias voluptas dignissimos. Voluptate aliquam error earum eligendi?
-          Nihil ab facilis, voluptatibus ducimus odit autem ex, dolore nostrum quisquam nisi ad, voluptates consequuntur rerum adipisci! Velit, repudiandae unde quam cum, temporibus suscipit, ad necessitatibus deleniti odit nostrum fugit.
-          Numquam debitis commodi excepturi nostrum perspiciatis atque, dignissimos cum laboriosam nisi inventore voluptate ipsum optio iusto illum pariatur praesentium ducimus? Ratione ducimus cum doloremque iste asperiores enim itaque, deserunt sapiente!
-          Nisi, fugit vitae a atque natus modi praesentium pariatur deleniti tenetur cupiditate nobis officia, suscipit quis quia voluptatem odit voluptas harum id iste debitis ex iusto ipsum. Necessitatibus, laudantium quam!
-          Error consectetur molestiae quam repellendus soluta! Optio dolores repellendus fugiat officia aliquam facilis, aliquid nesciunt sit expedita est beatae placeat qui ea repudiandae totam provident tempora laboriosam? Dolores, blanditiis tenetur.
-          Sunt autem officiis maxime, ratione cumque eveniet ea sit nulla, voluptas blanditiis ullam ducimus est rerum soluta, modi laborum deserunt. Atque eaque magnam quibusdam vero asperiores natus incidunt qui commodi.
-          Nihil dicta quas nesciunt totam laborum reprehenderit ducimus nemo placeat! Commodi quibusdam quia labore quas corporis, numquam incidunt accusantium at nulla vitae, ipsa deserunt. Voluptatum quaerat molestiae sequi repudiandae quo.
-          Quidem delectus ea assumenda ullam, blanditiis iusto recusandae accusantium cupiditate dolores culpa odio quas, reprehenderit vel? Aspernatur, quia cumque. Qui nemo nihil, assumenda sunt error ratione asperiores pariatur impedit possimus!
-          Modi nam odit dolorem natus, error facere eius iusto quidem, magnam omnis perferendis, sit in quasi optio. Enim minima consequatur totam. Reiciendis, sed laborum quis aliquam omnis ullam labore cum!
-          Nisi odit harum quam consequuntur sit quibusdam dolores? Alias at repudiandae earum exercitationem deleniti quisquam explicabo est quae sequi. Tenetur architecto libero tempore incidunt ratione nulla. Rem, alias. Nisi, ea?
-          Illum tempora inventore illo, vel aliquam nostrum atque laboriosam velit. Neque ab amet delectus hic quia molestias error explicabo accusantium tempore, architecto, minus nulla? Dolorum dolorem error libero voluptatum reprehenderit.
-          Ea nesciunt sequi tempora non, vel sit voluptate nulla magni eveniet, rem dicta aliquid facilis aperiam. Aspernatur odio veritatis corporis explicabo exercitationem esse deleniti numquam temporibus voluptates? Tempore, vel. Quasi.
-          Corporis alias quis nulla odit quos, illum culpa eum molestiae quasi, necessitatibus impedit exercitationem unde cupiditate dolor mollitia, aspernatur ut commodi ipsum! Sunt ducimus saepe ullam vitae explicabo recusandae ad!
-          Minus saepe harum, porro neque impedit distinctio laboriosam atque nisi esse explicabo delectus ab nobis accusantium consectetur voluptates commodi consequuntur ipsa, est sapiente doloribus voluptatibus vel culpa eos! Unde, fuga.
-          Minima natus maiores, harum sed doloribus non praesentium autem ullam fugit aperiam sit laborum iure sint itaque porro sapiente laboriosam fugiat aliquid dolor eveniet! Iure animi aperiam nisi libero! Magnam?
-          Provident facere iure optio accusantium sit iste reprehenderit enim in vitae? Molestiae reprehenderit nulla saepe fuga repellendus deserunt alias praesentium debitis, nobis est quidem tempora obcaecati unde? Ut, dolor consequuntur.
-          Mollitia quo perspiciatis iste veniam, ullam nemo neque totam eos quaerat aut assumenda facilis? Minus eligendi nemo dicta qui! Vitae iste ex aperiam sit velit, placeat temporibus nihil harum beatae.
-        </p>
-      </section>
-    </main>
-    <footer></footer>
-  </div>
-  
+  <!-- <div class="wrapper"> -->
+  <!-- <heade></heade> -->
+  <header></header>
+  <main>
+    <nav class="resizable">
+    </nav>
+    <aside class="resizable">
+    </aside>
+    <section class="resizable">
+      <img style="float: left;margin: 1rem;" src="https://via.placeholder.com/280x170.png?text=For+InterVolga" alt="">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam rem sit unde corporis porro distinctio
+        repellendus aliquid quaerat aperiam reiciendis similique quam ipsa, labore odit error nulla laboriosam dolore
+        maiores.
+        Odio praesentium vel doloribus quod maiores. Laboriosam repudiandae omnis dolorum nesciunt, dicta totam,
+        doloribus illum ullam tempore, perspiciatis eaque hic voluptatum officia harum. Doloremque minima tempore
+        consequuntur rem quia quo.
+        Perferendis similique nulla sint, impedit eveniet praesentium blanditiis! Sed nostrum reprehenderit cum
+        cupiditate natus voluptatem odit quibusdam minima id rerum voluptatum saepe, temporibus a tempore obcaecati hic,
+        necessitatibus non distinctio.
+        Sit aut ea voluptatibus porro vitae illo quod. In aliquid, culpa minima laborum sunt itaque quisquam deserunt
+        beatae delectus cumque, quidem corrupti veritatis voluptate accusantium ex vero provident facilis unde!
+        Qui, impedit! Saepe error veniam unde quis dolore nemo soluta facilis? Repudiandae voluptates ipsam maxime
+        debitis quasi, repellendus consequuntur exercitationem. Repellendus assumenda voluptatibus porro aut placeat,
+        temporibus numquam tempore accusamus?
+        Quisquam nobis quas dolorum facere cupiditate harum placeat deleniti hic est voluptate! Quidem adipisci,
+        aliquid, facilis earum autem eum eos exercitationem ut enim nostrum reprehenderit? Sunt deserunt ratione impedit
+        quas!
+        Facere aliquid voluptates a nihil hic assumenda esse veniam at repudiandae. Voluptatum nostrum nemo deleniti
+        laudantium. Laudantium cumque a eum error ducimus dolor iure, doloribus, rerum quia dolore ipsa veritatis!
+        Illum dolor porro impedit harum? Eos, officia consectetur! Excepturi eius culpa accusantium vitae architecto
+        perferendis quibusdam nulla, minus doloremque facilis repellendus error eligendi, quas expedita nam quae rem,
+        voluptate sed!
+        Facilis iusto ratione labore, magnam ipsam architecto aspernatur magni sint ex aliquam delectus quis expedita
+        accusantium. Nulla, unde animi. Corporis dignissimos tempore officiis aperiam ullam facilis consectetur ducimus
+        praesentium sequi.
+        Enim, est quaerat et deserunt voluptas soluta tempore, laborum maxime temporibus tenetur alias pariatur deleniti
+        molestiae facilis! Reiciendis suscipit corporis tempora numquam. Molestiae repellendus rem quas quibusdam
+        distinctio harum repudiandae.
+        Doloribus molestias, assumenda cupiditate culpa autem consectetur. Repellat, officiis odio. Voluptate rerum
+        ipsum molestias possimus quis mollitia quam recusandae cumque eos! Dolore, officiis molestiae accusamus placeat
+        explicabo quae ut voluptate!
+        Vitae necessitatibus libero numquam quod deserunt a quasi doloremque magni voluptatibus soluta. Quam tempore vel
+        sunt necessitatibus quaerat, dolores, asperiores eos itaque ab illum ducimus delectus modi error, sapiente
+        recusandae.
+        Voluptate iusto illo deleniti fugiat porro quisquam fuga dolores voluptatum, ratione velit ab eum corrupti fugit
+        reprehenderit necessitatibus dolorum optio exercitationem ex ullam officia labore, qui saepe nemo expedita.
+        Ipsam.
+        Ex laboriosam velit exercitationem beatae mollitia assumenda a fuga facere voluptatibus ut amet sint qui,
+        reprehenderit doloribus autem reiciendis tempore maxime voluptatum alias voluptas dignissimos. Voluptate aliquam
+        error earum eligendi?
+        Nihil ab facilis, voluptatibus ducimus odit autem ex, dolore nostrum quisquam nisi ad, voluptates consequuntur
+        rerum adipisci! Velit, repudiandae unde quam cum, temporibus suscipit, ad necessitatibus deleniti odit nostrum
+        fugit.
+        Numquam debitis commodi excepturi nostrum perspiciatis atque, dignissimos cum laboriosam nisi inventore
+        voluptate ipsum optio iusto illum pariatur praesentium ducimus? Ratione ducimus cum doloremque iste asperiores
+        enim itaque, deserunt sapiente!
+        Nisi, fugit vitae a atque natus modi praesentium pariatur deleniti tenetur cupiditate nobis officia, suscipit
+        quis quia voluptatem odit voluptas harum id iste debitis ex iusto ipsum. Necessitatibus, laudantium quam!
+        Error consectetur molestiae quam repellendus soluta! Optio dolores repellendus fugiat officia aliquam facilis,
+        aliquid nesciunt sit expedita est beatae placeat qui ea repudiandae totam provident tempora laboriosam? Dolores,
+        blanditiis tenetur.
+        Sunt autem officiis maxime, ratione cumque eveniet ea sit nulla, voluptas blanditiis ullam ducimus est rerum
+        soluta, modi laborum deserunt. Atque eaque magnam quibusdam vero asperiores natus incidunt qui commodi.
+        Nihil dicta quas nesciunt totam laborum reprehenderit ducimus nemo placeat! Commodi quibusdam quia labore quas
+        corporis, numquam incidunt accusantium at nulla vitae, ipsa deserunt. Voluptatum quaerat molestiae sequi
+        repudiandae quo.
+        Quidem delectus ea assumenda ullam, blanditiis iusto recusandae accusantium cupiditate dolores culpa odio quas,
+        reprehenderit vel? Aspernatur, quia cumque. Qui nemo nihil, assumenda sunt error ratione asperiores pariatur
+        impedit possimus!
+        Modi nam odit dolorem natus, error facere eius iusto quidem, magnam omnis perferendis, sit in quasi optio. Enim
+        minima consequatur totam. Reiciendis, sed laborum quis aliquam omnis ullam labore cum!
+        Nisi odit harum quam consequuntur sit quibusdam dolores? Alias at repudiandae earum exercitationem deleniti
+        quisquam explicabo est quae sequi. Tenetur architecto libero tempore incidunt ratione nulla. Rem, alias. Nisi,
+        ea?
+        Illum tempora inventore illo, vel aliquam nostrum atque laboriosam velit. Neque ab amet delectus hic quia
+        molestias error explicabo accusantium tempore, architecto, minus nulla? Dolorum dolorem error libero voluptatum
+        reprehenderit.
+        Ea nesciunt sequi tempora non, vel sit voluptate nulla magni eveniet, rem dicta aliquid facilis aperiam.
+        Aspernatur odio veritatis corporis explicabo exercitationem esse deleniti numquam temporibus voluptates?
+        Tempore, vel. Quasi.
+        Corporis alias quis nulla odit quos, illum culpa eum molestiae quasi, necessitatibus impedit exercitationem unde
+        cupiditate dolor mollitia, aspernatur ut commodi ipsum! Sunt ducimus saepe ullam vitae explicabo recusandae ad!
+        Minus saepe harum, porro neque impedit distinctio laboriosam atque nisi esse explicabo delectus ab nobis
+        accusantium consectetur voluptates commodi consequuntur ipsa, est sapiente doloribus voluptatibus vel culpa eos!
+        Unde, fuga.
+        Minima natus maiores, harum sed doloribus non praesentium autem ullam fugit aperiam sit laborum iure sint itaque
+        porro sapiente laboriosam fugiat aliquid dolor eveniet! Iure animi aperiam nisi libero! Magnam?
+        Provident facere iure optio accusantium sit iste reprehenderit enim in vitae? Molestiae reprehenderit nulla
+        saepe fuga repellendus deserunt alias praesentium debitis, nobis est quidem tempora obcaecati unde? Ut, dolor
+        consequuntur.
+        Mollitia quo perspiciatis iste veniam, ullam nemo neque totam eos quaerat aut assumenda facilis? Minus eligendi
+        nemo dicta qui! Vitae iste ex aperiam sit velit, placeat temporibus nihil harum beatae.
+      </p>
+    </section>
+  </main>
+  <footer></footer>
+  <!-- <footer></footer> -->
+  <!-- </div> -->
+
 </body>
 
 </html>
